# DiagLux-RAG

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: KnowledgeBaseAnnot.txt
dataset/Annotations/: text1.txt  text10.txt  text11.txt  text12.txt  text13.txt  text14.txt  text15.txt  text16.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
dataset/Texts/: text1.txt  text10.txt  text11.txt  text12.txt  text13.txt  text14.txt  text15.txt  text16.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt  text8.txt  text9.txt
docs/: CONTRACTS.md  control_findings.md  methods_decoding.md  rag_findings.md  retrieval_findings_bm25.md  retrieval_findings_dense.md
outputs/processed/: alignment_report.md  questions.jsonl  (+4 more)
scripts/: analyze_orthography.py  analyze_results.py  build_dataset.py  export_human_eval.py  make_variance_sample.py  run_answering.py  run_rag_grid.py  run_retrieval.py
tests/: _analysis_fixtures.py  _retrieval_fixtures.py  answering_testutils.py  test_analysis_accuracy.py  test_analysis_confusion.py  test_analysis_diagnostics.py  test_analysis_loading.py  test_analysis_significance.py  test_answering_adaptive_client.py  test_answering_context.py  test_answering_parsing.py  test_answering_prompts.py  test_answering_resilience.py  test_answering_runner.py  test_answering_semantic.py  test_data_align.py  test_data_chunking.py  test_data_kb.py  test_data_shuffle.py  test_retrieval_bm25.py  test_retrieval_dense.py  test_retrieval_fuse.py  test_retrieval_metrics.py  test_retrieval_tokenize.py
(+29 files in other folders)
